--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.10.2",
+    "@react-google-maps/marker-clusterer": "^2.10.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
+    "env": "^0.0.2",
+    "gh-pages": "^3.2.3",
+    "google-map-react": "^2.1.10",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sequelize": "^6.19.0",
+    "sequelize-cli": "^6.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
